2009-Mar-24     cpo     Tag V00-02-02.  Removed WaveformV1.hh and AcqDataDescV1.* and DataCallback.hh.  Added acqiris bit field locations in DataDescV1.hh.
2009-Mar-24     cpo     Tag V00-02-01.  Improved acqiris data support.
2009-Mar-04	weaver	Tag V00-02-00.  Added camera, evr, opal1k data formats.

2009-Feb-13     cpo     Add outofsynch damage bit.

2008-Nov-14     cpo     Tag V00-01-00.  First version to support offline.