@@ -1,0 +1,5 @@
+tgtnames = xtcreader
+
+tgtsrcs_xtcreader := xtcreader.cc
+tgtlibs_xtcreader := pdsdata/xtcdata pdsdata/acqdata
+tgtslib_xtcreader := /usr/lib/rt
